mbtiles/tests/snapshots/copy__convert@v1__z6__hash.snap
---
source: mbtiles/tests/copy.rs
expression: actual_value
---
- type: table
  tbl_name: metadata
  sql: "CREATE TABLE metadata (\n    name TEXT NOT NULL PRIMARY KEY,\n    value TEXT\n)"
  values:
    - "(  \"agg_tiles_hash\", \"675349A4153AEC0679BE9C0637AEEBCC\"  )"
    - "(  \"hash_algorithm\", \"md5\"  )"
    - "(  \"md-edit\", \"value - v1\"  )"
    - "(  \"md-remove\", \"value - remove\"  )"
    - "(  \"md-same\", \"value - same\"  )"
- type: table
  tbl_name: tiles_with_hash
  sql: "CREATE TABLE tiles_with_hash (\n    zoom_level INTEGER NOT NULL,\n    tile_column INTEGER NOT NULL,\n    tile_row INTEGER NOT NULL,\n    tile_data BLOB,\n    tile_hash TEXT,\n    PRIMARY KEY (zoom_level, tile_column, tile_row)\n)"
  values:
    - "(  6, 0, 3, blob(same), \"51037A4A37730F52C8732586D3AAA316\"  )"
    - "(  6, 0, 5, blob(1-keep-1-rm), \"535A5575B48444EDEB926815AB26EC9B\"  )"
    - "(  6, 1, 4, blob(edit-v1), \"EFE0AE5FD114DE99855BC2838BE97E1D\"  )"
    - "(  6, 2, 6, blob(1-keep-1-rm), \"535A5575B48444EDEB926815AB26EC9B\"  )"
- type: index
  tbl_name: metadata
  sql: ~
  values: ~
- type: index
  tbl_name: tiles_with_hash
  sql: ~
  values: ~
- type: view
  tbl_name: tiles
  sql: "CREATE VIEW tiles AS\nSELECT\n    zoom_level,\n    tile_column,\n    tile_row,\n    tile_data\nFROM tiles_with_hash"
  values: ~
